reduced line-height on titles to stop it become so spread out when title wraps

--- a/src/components/ArchiveDetail/ArchiveDetail.css
+++ b/src/components/ArchiveDetail/ArchiveDetail.css
@@ -81,6 +81,7 @@
 
 	.detail-img-title {
 		font-size: 1.6rem;
+		line-height: var(--line-height-title);
 	}
 
 	.detail-img-explanation {
