--- a/src/components/DailyImage/DailyImage.css
+++ b/src/components/DailyImage/DailyImage.css
@@ -48,6 +48,7 @@
 	.img-title {
 		margin: 4.5rem 0 1rem 0;
 		font-size: 1.6rem;
+		line-height: var(--line-height-title);
 		text-align: center;
 	}
 
